--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde-hjson = "1.0"
 serde_json = "1.0"
 serde_with = "3.9"
+urlencoding = "2.1.3"
