--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
+log = "0.4.22"
 mockall = "0.13.0"
 rayon = "1.10.0"
 reqwest = { version = "0.12", features = ["blocking"] }
@@ -12,4 +13,5 @@ serde = { version = "1.0", features = ["derive"] }
 serde-hjson = "1.0"
 serde_json = "1.0"
 serde_with = "3.9"
+simplelog = "0.12.2"
 urlencoding = "2.1.3"
