--- a/config.json
+++ b/config.json
@@ -67,6 +67,15 @@
             "display_name": "Decky Loader",
             "description": "Homebrew plugin launcher for the Steam Deck.",
             "more_info": "If you encounter strange errors in your quick menu, try uninstalling or updating Decky."
+        },
+        {
+            "id": "fake-testing-custom",
+            "provider_config": {
+                "type": "custom"
+            },
+            "icon": "XXX",
+            "display_name": "Custom Trick",
+            "description": "Nothingburger."
         }
     ]
 }
