--- a/gui/rust/Cargo.toml
+++ b/gui/rust/Cargo.toml
@@ -8,3 +8,4 @@ crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.
 
 [dependencies]
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
+decktricks = { path = "../.." }
