--- a/gui/rust/Cargo.toml
+++ b/gui/rust/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.
 
 [dependencies]
-godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
+godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
 decktricks = { path = "../.." }
