--- a/.github/workflows/rust_cli.yml
+++ b/.github/workflows/rust_cli.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Install Flatpak
+      run: |
+        sudo apt update
+        sudo apt install -y flatpak
     - name: Build
       run: cargo build --verbose
     - name: Run tests
