--- a/.github/workflows/build_godot_gui.yml
+++ b/.github/workflows/build_godot_gui.yml
@@ -10,9 +10,28 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  gui_tests:
 
     runs-on: ubuntu-latest
+    container:
+      image: gleesus/decktricks
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Build GUI Rust
+      run: cargo build
+      working-directory: ./gui/rust
+
+    - name: Make build dir
+      run: mkdir -p ./gui/godot/build
+
+    - name: Copy Rust Lib to Godot
+      run: cp ./gui/rust/target/debug/libdecktricks_godot_gui.so ./gui/godot/build
+
+    - name: Build GUI
+      run: godot --headless --export-debug Linux
+      working-directory: ./gui/godot
+
+    - name: Run GUI e2e scripts
+      run: ./scripts/run_all_gui_e2e_tests.sh
