--- a/.github/workflows/build_godot_gui.yml
+++ b/.github/workflows/build_godot_gui.yml
@@ -22,23 +22,18 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Build GUI Rust
-        run: cargo build
-        working-directory: ./gui/rust
+      - name: Run GUI build script
+        run: ./scripts/build_decktricks_gui.sh release
 
-      - name: Make build dir
-        run: mkdir -p ./gui/godot/build
-
-      - name: Copy Rust Lib to Godot
-        run: cp ./gui/rust/target/debug/libdecktricks_godot_gui.so ./gui/godot/build
-
-      - name: Build GUI
-        run: godot --headless --export-debug Linux
-        working-directory: ./gui/godot
+      - name: Get binary from tar
+        run: |
+          mkdir /tmp/decktricks_work
+          tar xvf ./build/decktricks.tar.gz -C /tmp/decktricks_work
 
       - name: Run GUI e2e scripts
-        run: ./scripts/run_all_gui_e2e_tests.sh
+        run: ./scripts/run_all_gui_e2e_tests.sh /tmp/decktricks_work/decktricks-gui
 
+  # TODO: ensure this is enough gating to prevent branch/main PRs from triggering latest tags
   update_latest_branch:
     if: github.event_name == 'push'
     needs: gui_tests
