Fix to GUI build

--- a/misc/act-docker/Dockerfile
+++ b/misc/act-docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM archlinux:base-devel AS base
 ENV CI=true
-RUN pacman -Syu --noconfirm git flatpak fontconfig p7zip rustup
+RUN pacman -Syu --noconfirm git flatpak fontconfig p7zip rustup vim
 RUN rustup default stable
 #RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
 #RUN ln -sf /root/.cargo/bin/cargo /usr/bin/cargo
