--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -95,6 +95,7 @@ jobs:
     steps:
       - run: mkdir /tmp/artifacts
       - uses: actions/download-artifact@v4
+        path: /tmp/artifacts
 
       - name: Create latest release
         uses: softprops/action-gh-release@v2
@@ -106,5 +107,5 @@ jobs:
           tag_name: latest
           body: A release candidate for pushing out. This has passed all automated tests and should be safe to use, but has not yet received human verification.
           files: |
-            verified-gui-files/decktricks.tar.gz
-            verified-gui-files/decktricks_install.desktop
+            /tmp/artifacts/verified-gui-files/decktricks.tar.gz
+            /tmp/artifacts/verified-gui-files/decktricks_install.desktop
