--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -95,7 +95,9 @@ jobs:
     steps:
       - run: mkdir /tmp/artifacts
       - uses: actions/download-artifact@v4
-        path: /tmp/artifacts
+        with:
+          name: verified-gui-files
+          path: /tmp/artifacts
 
       - name: Create latest release
         uses: softprops/action-gh-release@v2
