--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -99,6 +99,8 @@ jobs:
           name: verified-gui-files
           path: /tmp/artifacts
 
+      - run: find /tmp/artifacts
+
       - name: Create latest release
         uses: softprops/action-gh-release@v2
         #if: startsWith(github.ref, 'refs/tags/')
